calico/calico-deny-all.yaml
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: calico-deny-all
spec:
  types:
  - Ingress
  - Egress
