calico/calico-frontend-policy.yaml
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: calico-frontend-policy
  namespace: test-1
spec:
  egress:
  - action: Allow
  ingress:
  - action: Deny
    source:
      selector: tier == 'frontend'
  - action: Allow
  selector: tier == frontend
